um ajuste de erro antigo